update search page styles

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -30,6 +30,7 @@
 // - Picker
 // - Progress
 // - Reply
+// - Search
 // - Share
 // - Table
 // - Timeline
@@ -69,6 +70,7 @@
 @import 'common/picker';
 @import 'common/progress';
 @import 'common/reply';
+@import 'common/search';
 @import 'common/share';
 @import 'common/table';
 @import 'common/timeline';
