--- a/common/common.scss
+++ b/common/common.scss
@@ -2510,10 +2510,10 @@ div.ac-wrap input[type='text'] {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  display: -webkit-inline-box;
-  display: -webkit-inline-flex;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   height: 36px;
 }
 .select2-container a.select2-choice abbr {
@@ -2552,6 +2552,7 @@ div.ac-wrap input[type='text'] {
 .select2-container a.select2-choice .select2-arrow {
   border-radius: 0;
   height: auto;
+  margin-left: auto;
   position: static;
   width: auto;
 }
@@ -7750,6 +7751,7 @@ div.badges .form-horizontal > div.group-flair-inputs input[type='text'], div.gro
 }
 .settings .setting .setting-value .select2-container {
   margin-bottom: 8px;
+  width: auto !important;
 }
 
 .site-texts .search-area {
