--- a/scss/common/_admin.scss
+++ b/scss/common/_admin.scss
@@ -801,6 +801,7 @@ div {
 
       .select2-container {
         margin-bottom: $card-inner-spacer-x;
+        width: auto !important;
       }
     }
   }
