--- a/scss/common/_form-select2.scss
+++ b/scss/common/_form-select2.scss
@@ -74,7 +74,7 @@
       @extend %btn-raised;
 
       align-items: center;
-      display: inline-flex;
+      display: flex;
       height: $btn-height;
 
       abbr {
@@ -104,6 +104,7 @@
       .select2-arrow {
         border-radius: 0;
         height: auto;
+        margin-left: auto;
         position: static;
         width: auto;
 
