--- a/scss/common/_form-select2.scss
+++ b/scss/common/_form-select2.scss
@@ -150,12 +150,17 @@
     }
 
     .select2-search-choice {
-      margin: $spacer-xs;
+      font-size: $font-size-base;
+      line-height: 1;
+      margin: ($spacer-xs / 2);
+      padding-top: (($text-field-height - $text-field-padding-y * 2 - $font-size-base) / 2 - 1);
+      padding-right: $spacer-xs;
+      padding-bottom: (($text-field-height - $text-field-padding-y * 2 - $font-size-base) / 2 - 1);
     }
 
     .select2-search-field input {
       height: auto;
-      margin: $spacer-xs;
+      margin: ($spacer-xs / 2);
       padding: 0;
     }
   }
@@ -219,5 +224,25 @@
 
     height: $text-field-box-height !important;
     margin-bottom: ($dropdown-link-padding-y-sm * 2);
+  }
+}
+
+.select2-search-choice-close {
+  @include material-icons('close');
+
+  background-image: none;
+  color: unquote('$primary');
+  height: $font-size-base;
+  top: (($text-field-height - $text-field-padding-y * 2 - $font-size-base) / 2);
+  width: $font-size-base;
+
+  @include focus-hover {
+    color: unquote('$tertiary');
+  }
+
+  &::before {
+    font-size: inherit;
+    line-height: 1;
+    vertical-align: top;
   }
 }
