remove ghost preview header in reply box

--- a/common/common.scss
+++ b/common/common.scss
@@ -4971,8 +4971,7 @@ div.poll .results .bar-back::before {
   padding: 0 16px 16px;
   position: static;
 }
-#reply-control .wmd-controls .d-editor-preview,
-#reply-control .wmd-controls .d-editor-preview-header {
+#reply-control .wmd-controls .d-editor-preview {
   padding: 16px 16px;
 }
 #reply-control .wmd-controls .d-editor-preview {
