--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -372,8 +372,7 @@
       position: static;
     }
 
-    .d-editor-preview,
-    .d-editor-preview-header {
+    .d-editor-preview {
       padding: $card-padding-y $card-padding-x;
     }
 
