--- a/common/common.scss
+++ b/common/common.scss
@@ -1381,6 +1381,12 @@ div.poll .poll-buttons .btn:first-child, .modal-footer a:first-child, .modal-foo
 .badge-wrapper[href]:focus {
   outline: 0;
 }
+.badge-wrapper.box, .badge-wrapper.bullet {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 .badge-wrapper.box span.badge-category, .badge-wrapper.bullet span.badge-category {
   line-height: 32px;
 }
@@ -1407,6 +1413,10 @@ div.poll .poll-buttons .btn:first-child, .modal-footer a:first-child, .modal-foo
   width: 16px;
 }
 .badge-wrapper.box {
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   margin-top: 0;
 }
 .badge-wrapper.box span.badge-category {
@@ -1422,12 +1432,6 @@ div.poll .poll-buttons .btn:first-child, .modal-footer a:first-child, .modal-foo
 }
 .badge-wrapper.box span.badge-category-parent-bg + .badge-category-bg + .badge-category {
   margin-left: 36px;
-}
-.badge-wrapper.bullet {
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 body code, body
