remove hover media query

--- a/scss/mixins/_hover.scss
+++ b/scss/mixins/_hover.scss
@@ -1,17 +1,12 @@
 @mixin focus-hover {
-  &:focus {
-    @content
-  }
-
-  @include hover {
+  &:focus,
+  &:hover {
     @content
   }
 }
 
 @mixin hover {
-  @media (hover: hover) {
-    &:hover {
-      @content
-    }
+  &:hover {
+    @content
   }
 }
