stop header nav item bg changes when active

--- a/scss/mobile/_header.scss
+++ b/scss/mobile/_header.scss
@@ -1,3 +1,9 @@
-.d-header .title {
-  height: auto;
+.d-header {
+  .icons .icon:active {
+    background-color: transparent;
+  }
+
+  .title {
+    height: auto;
+  }
 }
