fix menu panel scroll

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -8,7 +8,9 @@
 // - Base
 // - Header
 // - Login
+// - Menu panel
 
 @import 'mobile/base';
 @import 'mobile/header';
 @import 'mobile/login';
+@import 'mobile/menu-panel';
