adjust list control v-align

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -7,10 +7,12 @@
 //
 // - Base
 // - Header
+// - List control
 // - Login
 // - Menu panel
 
 @import 'mobile/base';
 @import 'mobile/header';
+@import 'mobile/list-control';
 @import 'mobile/login';
 @import 'mobile/menu-panel';
