make % rules reusable for desktop and mobile too

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'mixins';
+@import 'extensions';
 
 
 
@@ -7,8 +8,8 @@
 //
 // - Base
 //   - Base override
+//
 // - Button
-// - Card
 // - Chip
 // - Code
 // - Cooked
@@ -28,7 +29,6 @@
 //   - Edit topic status update
 // - Notification
 // - Picker
-// - Progress
 // - Reply
 // - Search
 // - Share
@@ -47,8 +47,8 @@
 
 @import 'common/base';
 @import 'common/base-override';
+
 @import 'common/button';
-@import 'common/card';
 @import 'common/chip';
 @import 'common/code';
 @import 'common/cooked';
@@ -68,7 +68,6 @@
 @import 'common/modal-edit-topic';
 @import 'common/notification';
 @import 'common/picker';
-@import 'common/progress';
 @import 'common/reply';
 @import 'common/search';
 @import 'common/share';
