--- a/scss/common/_base-override.scss
+++ b/scss/common/_base-override.scss
@@ -20,127 +20,10 @@
   padding-left: 0;
 }
 
-.nav-pills,
-%nav-pills {
-  > li {
-    margin-right: 1px;
-
-    &.active > a {
-      @extend %nav-pills-active;
-    }
-
-    > a {
-      @extend %btn-flat;
-
-      &.active {
-        @extend %nav-pills-active;
-      }
-
-      body & {
-        display: block;
-        opacity: $nav-link-opacity;
-        text-transform: none;
-
-        @include focus-hover {
-          background-color: transparent;
-          opacity: 1;
-        }
-      }
-    }
-  }
+.nav-pills {
+  @extend %nav-pills;
 }
 
-%nav-pills-active {
-  color: color-dynamic(unquote('$quaternary'));
-  opacity: 1;
-
-  body & {
-    @include focus-hover {
-      background-color: unquote('$quaternary');
-      color: color-dynamic(unquote('$quaternary'));
-
-      &::before {
-        opacity: 1;
-      }
-    }
-  }
-
-  &::before {
-    background-color: color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light);
-    border-radius: $btn-border-radius;
-    content: '';
-    display: block;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
-}
-
-.nav-stacked,
-%nav-stacked {
-  background-color: transparent;
-
-  li {
-    border-bottom: 0;
-
-    &.active > a {
-      @extend %nav-stacked-active;
-    }
-
-    > a {
-      @extend %btn-flat;
-
-      &.active {
-        @extend %nav-stacked-active;
-      }
-
-      body & {
-        display: block;
-        opacity: $nav-link-opacity;
-        text-align: left;
-        text-transform: none;
-
-        @include focus-hover {
-          background-color: transparent;
-          opacity: 1;
-        }
-      }
-    }
-  }
-}
-
-%nav-stacked-active {
-  color: color-dynamic(unquote('$quaternary'));
-  opacity: 1;
-
-  body & {
-    @include focus-hover {
-      background-color: unquote('$quaternary;');
-      color: color-dynamic(unquote('$quaternary'));
-
-      &::before {
-        opacity: 1;
-      }
-    }
-  }
-
-  &::after {
-    display: none;
-  }
-
-  &::before {
-    background-color: color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light);
-    border-radius: $btn-border-radius;
-    content: '';
-    display: block;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
+.nav-stacked {
+  @extend %nav-stacked;
 }
