adjust topic list spacing

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -11,9 +11,11 @@
 // - List control
 // - Login
 // - Menu panel
+// - Topic list
 
 @import 'mobile/base';
 @import 'mobile/header';
 @import 'mobile/list-control';
 @import 'mobile/login';
 @import 'mobile/menu-panel';
+@import 'mobile/topic-list';
