stack advanced search fields

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -11,6 +11,7 @@
 // - List control
 // - Login
 // - Menu panel
+// - Search
 // - Topic list
 
 @import 'mobile/base';
@@ -18,4 +19,5 @@
 @import 'mobile/list-control';
 @import 'mobile/login';
 @import 'mobile/menu-panel';
+@import 'mobile/search';
 @import 'mobile/topic-list';
