--- a/scss/common/_cooked.scss
+++ b/scss/common/_cooked.scss
@@ -66,6 +66,7 @@
   .cooked & {
     margin-right: ($card-padding-x * -1);
     margin-left: ($card-padding-x * -1);
+    max-width: calc(100% + #{$card-padding-x * 2});
     padding-bottom: 56.25% !important;
     width: calc(100% + #{$card-padding-x * 2}) !important;
 
