--- a/scss/common/_cooked.scss
+++ b/scss/common/_cooked.scss
@@ -45,7 +45,8 @@
     margin-left: ($card-padding-x * -1);
   }
 
-  > :last-child {
+  > :last-child,
+  > .code-highlight:last-child > pre:last-child {
     margin-bottom: 0;
   }
 
