update styles for topic post

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -6,18 +6,20 @@
 
 // Table of contents
 //
-// - Base
+// - Base override
 // - Header
 // - List control
 // - Login
 // - Menu panel
 // - Search
 // - Topic list
+// - Topic post
 
-@import 'mobile/base';
+@import 'mobile/base-override';
 @import 'mobile/header';
 @import 'mobile/list-control';
 @import 'mobile/login';
 @import 'mobile/menu-panel';
 @import 'mobile/search';
 @import 'mobile/topic-list';
+@import 'mobile/topic-post';
