--- a/scss/common.scss
+++ b/scss/common.scss
@@ -9,8 +9,8 @@
 // - Base
 //   - Base override
 //
+// - Badge
 // - Button
-// - Chip
 // - Code
 // - Cooked
 //   - Aside
@@ -48,8 +48,8 @@
 @import 'common/base';
 @import 'common/base-override';
 
+@import 'common/badge';
 @import 'common/button';
-@import 'common/chip';
 @import 'common/code';
 @import 'common/cooked';
 @import 'common/cooked-aside';
