update styles for category list

--- a/scss/mobile/_topic-list.scss
+++ b/scss/mobile/_topic-list.scss
@@ -1,3 +1,68 @@
+.categories-list .category-list {
+  margin-bottom: 0;
+  margin-left: 0;
+
+  .subcategories:first-child {
+    margin-top: 0;
+  }
+}
+
+.category-list-item {
+  border-left-width: ($table-border-width * 2);
+
+  &.category .posts {
+    vertical-align: middle;
+  }
+
+  > footer {
+    align-items: center;
+    border-top: $table-border-width solid color-chooser($table-border-color-dark, $table-border-color-light);
+    border-bottom: $table-border-width solid color-chooser($table-border-color-dark, $table-border-color-light);
+    display: flex;
+    min-height: $tbody-cell-height;
+    padding: $tbody-cell-padding-y ($tbody-cell-padding-x * 2);
+
+    figure {
+      @extend %typography-caption;
+
+      margin: 0 auto 0 0;
+    }
+
+    .btn {
+      margin-left: $spacer-xs;
+    }
+  }
+
+  .age {
+    margin-left: $spacer-xs;
+  }
+
+  .category-topic-link .main-link .age {
+    @extend %typography-caption;
+  }
+
+  .topic-list {
+    box-shadow: none;
+    margin-bottom: 0;
+
+    td {
+      @extend %tbody-cell;
+
+      &:first-of-type {
+        padding-left: ($tbody-cell-padding-x * 2);
+      }
+
+      &:last-of-type {
+        padding-right: ($tbody-cell-padding-x * 2);
+      }
+    }
+
+    th {
+      @extend %thead-cell;
+    }
+  }
+}
+
 .mobile-view .topic-list {
   div + .topic-details {
     min-height: 0;
