--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -11,6 +11,7 @@
 // - List control
 // - Login
 // - Menu panel
+// - Reply
 // - Search
 // - Topic list
 // - Topic post
@@ -20,6 +21,7 @@
 @import 'mobile/list-control';
 @import 'mobile/login';
 @import 'mobile/menu-panel';
+@import 'mobile/reply';
 @import 'mobile/search';
 @import 'mobile/topic-list';
 @import 'mobile/topic-post';
