--- a/scss/common/_user.scss
+++ b/scss/common/_user.scss
@@ -87,6 +87,18 @@
   ul {
     margin: $card-inner-spacer-y 0 0;
     max-width: none;
+
+    + p {
+      border-top: 1px solid color-chooser($white-divider, $black-divider);
+      margin-right: ($card-padding-x * -1);
+      margin-bottom: 0;
+      margin-left: ($card-padding-x * -1);
+      padding: $card-inner-spacer-y $card-padding-x;
+
+      &:last-child {
+        padding-bottom: $card-padding-y;
+      }
+    }
   }
 }
 
