--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -15,6 +15,7 @@
 // - Search
 // - Topic list
 // - Topic post
+// - User
 
 @import 'mobile/base-override';
 @import 'mobile/header';
@@ -25,3 +26,4 @@
 @import 'mobile/search';
 @import 'mobile/topic-list';
 @import 'mobile/topic-post';
+@import 'mobile/user';
