--- a/scss/mobile/_topic-list.scss
+++ b/scss/mobile/_topic-list.scss
@@ -72,11 +72,24 @@
   .num.activity {
     clear: both;
     float: right;
+    margin-left: $spacer-xs;
     position: static;
   }
 }
 
 .topic-list {
+  .badge-notification {
+    font-size: inherit;
+    padding: ($chip-padding-y / 2) ($chip-padding-x / 2);
+  }
+
+  .category-topic-link td {
+    &.num .badge-notification {
+      font-size: inherit;
+      padding: ($chip-padding-y / 2) ($chip-padding-x / 2);
+    }
+  }
+
   .num {
     &.activity,
     &.posts {
@@ -88,5 +101,20 @@
 
   .posts-map {
     font-size: inherit;
+  }
+
+  .topic-item-stats {
+    align-items: center;
+    display: flex;
+
+    > .pull-right {
+      order: 1;
+      margin-left: auto;
+    }
+
+    .category {
+      line-height: 1;
+      margin-right: $tbody-cell-padding-x;
+    }
   }
 }
