--- a/scss/mobile/_user.scss
+++ b/scss/mobile/_user.scss
@@ -1,9 +1,14 @@
+.badge-grouping,
 .badges-section {
   column-count: 1;
 
   .badge-card:last-of-type {
     margin-bottom: $card-margin-y;
   }
+}
+
+.paginated-topics-list {
+  margin-top: 0;
 }
 
 .top-section:not(.badges-section):not(.stats-section) {
@@ -16,30 +21,54 @@
   width: 100%;
 }
 
-.user-main .about {
-  .controls a {
-    @extend %btn-sm;
-  }
+.user-badges > .ember-view,
+.user-badges-list {
+  column-count: 1;
+}
 
-  .details .avatar {
-    height: ($font-size-h2 * $line-height-h2);
-    width: ($font-size-h2 * $line-height-h2);
-  }
-
-  .secondary dl {
-    flex-direction: column;
-
-    dd,
-    dt {
-      margin-right: 0;
+.user-main {
+  .about {
+    .controls a {
+      @extend %btn-sm;
     }
 
-    dd {
-      margin-bottom: ($card-inner-spacer-y / 2);
+    .details .avatar {
+      height: ($font-size-h2 * $line-height-h2);
+      width: ($font-size-h2 * $line-height-h2);
+    }
 
-      &:last-child {
-        margin-bottom: 0;
+    .secondary dl {
+      flex-direction: column;
+
+      dd,
+      dt {
+        margin-right: 0;
       }
+
+      dd {
+        margin-bottom: ($card-inner-spacer-y / 2);
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  .user-content {
+    margin-top: 0;
+
+    .user-invite-controls {
+      align-items: flex-start;
+      flex-direction: column;
+
+      .span15 {
+        margin-bottom: ($card-inner-spacer-y / 2);
+      }
+    }
+
+    .user-invite-list td {
+      word-break: break-word;
     }
   }
 }
