fix modal positioning

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -11,6 +11,7 @@
 // - List control
 // - Login
 // - Menu panel
+// - Modal
 // - Reply
 // - Search
 // - Topic list
@@ -24,6 +25,7 @@
 @import 'mobile/list-control';
 @import 'mobile/login';
 @import 'mobile/menu-panel';
+@import 'mobile/modal';
 @import 'mobile/reply';
 @import 'mobile/search';
 @import 'mobile/topic-list';
