convert fa television to md tv

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -314,6 +314,10 @@
   @include material-icons('assignment');
 }
 
+.fa-television {
+  @include material-icons('tv');
+}
+
 .fa-thumb-tack {
   @include material-icons('flip_to_front');
 
