--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -254,6 +254,10 @@
   @include material-icons('edit');
 }
 
+.fa-pencil-square-o {
+  @include material-icons('edit');
+}
+
 .fa-picture-o {
   @include material-icons('crop_original');
 }
