use mixin for hover
we will find a way to improve our hover mixin in a future release

--- a/scss/common/_admin.scss
+++ b/scss/common/_admin.scss
@@ -57,7 +57,7 @@
     tr {
       @extend %table-row;
 
-      &:hover {
+      @include hover {
         background-color: color-chooser($table-bg-hover-dark, $table-bg-hover-light);
       }
     }
