--- a/scss/common/_picker.scss
+++ b/scss/common/_picker.scss
@@ -23,7 +23,7 @@
   text-align: center;
   width: $btn-height;
 
-  &:hover {
+  @include hover {
     background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
     border-radius: 50%;
     color: color-chooser($btn-color-dark, $btn-color-light);
